src/test/deca/context/valid/sansObjet/AssignConFloat.deca
{
	float x;

	x = 5;
}
