src/test/deca/context/invalid/sansObjet/opModulo.deca
{
  float x = 0.1;
  int y = 3;
  x % y;
}
